optimizing UI changing LinearLayout to ConstraintLayout, add of both comment button and historic button on the main activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MoodTracker</string>
+    <string name="main_smiley">ImageView containing the selected humor</string>
 </resources>
